
@startuml class diagram
class "フォーム画面" as fmSc{
    Object errorMessages
    void anonymous():初期化処理
}
class "FormView" as fv{
    HTMLElement form
    HTMLElement name
    HTMLElement gender
    HTMLElement age
    HTMLElement address
    HTMLElement message
    HTMLElement submitBtn
    HTMLElement errArea
    HTMLElement modalScreen
    Construnctor FormView(name,gender,age,\naddress,message,submitBtn,errArea,\nmodalScreen)
    void setSubmitEvt(elem)
    void setInputBoxFocusEvts(elem)
    void onSubmit()
}
class "FormController" as fc{
    Construnctor FormController(modalScreen)
    void onSubmit(name, gender, age, address, message)
    Array<String> isvalid()
    void setError(Array<String>)
}
class "FormModel" as fm{
    String name
    int gender
    int age
    String address
    String message
    Construnctor FormModel(name, gender, \nage, address, message)
    boolean isvalid"fieldName"(field)
    String createSerializedData()
}
class "結果表示画面" as rsltSc{
}
class "ModalView" as mv{
    HTMLElement screen
    HTMLElement screenCover
    HTMLElement dlBtn
    HTMLElement closeBtn
    Construnctor ModalView(screen,dlBtn,closeBtn)
    setter serializedData()
    void download()
    void close()
}
class "ModalModel" as mm{
    String serializedData
    String createTextBlob(text)
    String createText()
}

fmSc "1" o-- "1" fv  : 初期化処理でインスタンス化
fv "1" -- "1" fc  : 相互参照
fc "1" o-- "1" fm  : contains

' fmSc  -  rsltSc : モーダル画面表示
rsltSc  -- mv   : 操作
fmSc "1" o-- "1" mv  : 初期化処理でインスタンス化
fc  -- mv   : screen操作
mv  "1" o-- "1" mm : contains





@enduml